# uf_decoder

./: .clang-format  .gitignore  CMakeLists.txt
include/SVG/: Circle.h  Document.h  Line.h  Path.h  Rect.h  SVGObject.h  Style.h  Text.h
include/UF/: SurfaceCode.h  ToricCode.h  ToricCodeVisualizer.h  UFDecoder.h  UFDecoder3D.h
include/Utils/: Casting.h  PrintSpan.h  SmallString.h
python/: CMakeLists.txt  uf_python.cpp
src/: CMakeLists.txt
src/SVG/: SVGObject.cpp
src/UF/: SurfaceCode.cpp  UFDecoder3D.cpp
tools/: CMakeLists.txt  scratch.cpp  scratch3d.cpp
